# zubridge

./: .gitignore  .prettierignore  AGENTS.md  BYPASS_THUNK_LOCK_DEBUG_FINDINGS.md  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_PLAN_BATCHING.md  IMPLEMENTATION_PLAN_DELTAS.md  README.md  ROADMAP.md  SUPPORT.md  UNIFFI_REFACTOR_PLAN.md  biome.jsonc  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  releasekit.config.json  releasekit.config.jsonc  tsconfig.base.json  turbo.json  turbo.jsonc  version.config.json
.agent-os/standards/: best-practices.md  cicd-patterns.md  code-style.md  monorepo-conventions.md  tech-stack.md
.claude/commands/: sync-product.md
.cursor/rules/: coding-patterns.mdc  commands.mdc  package-structure.mdc
.github/scripts/: setup_e2e_linux.sh
.github/workflows/: _ci-build.reusable.yml  _ci-e2e.reusable.yml  _ci-lint.reusable.yml  _ci-mode-build.reusable.yml  _ci-mode-e2e.reusable.yml  _ci-unit.reusable.yml  _e2e-test.reusable.yml  _package-test.reusable.yml  _release-calculate.reusable.yml  _release-orchestration.reusable.yml  _release-post.reusable.yml  _release-prepare.reusable.yml  _release-publish.reusable.yml  (+9 more)
agent-os/: config.yml
benches/: baseline.json
docs/: developer.md  product.md
e2e/: CHANGELOG.md  constants.ts  package.json  tsconfig.json  wdio.conf.ts
examples/: README.md  custom  redux  zustand-basic  zustand-handlers  zustand-reducers
scripts/: bench-aggregate.ts  clean-cache.ts  publish-crates.ts  publish.ts  run-package-e2e-no-xvfb.ts  run-package-e2e.ts  start-example-app.ts  update-releasekit.ts
spikes/: README.md
(+514 files in other folders)
